examples/test/testpolicy19641.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19641
  namespace: namespace108
spec:
  podSelector:
    matchLabels:
      key33: value35
      key21: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value1
          key17: value11
      podSelector:
        matchLabels:
          key46: value6
          key0: value3
